--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,4 @@ services:
     volumes:
       - ./public:/application/public
       - ./src:/application/src
+      - ./vendor:/application/vendor
