a single URL can be parsed now

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "autoload": {
         "psr-4": {
             "RequestHandler\\": "src/ParseRequest",
-            "Client\\": "src/Client"
+            "Client\\": "src/Client",
+            "Worker\\": "src/Worker"
         }
     }
 }
